--- a/portfolio.html
+++ b/portfolio.html
@@ -40,13 +40,18 @@
     h1 {
       color:#303;
       font-family: 'Megrim', cursive;
-      font-size: 46px;
+      font-size: 180px;
       text-shadow: 1px 1px 2px white;
       text-transform: uppercase;
 	   letter-spacing: 20px;
 	   margin-bottom: 30px;
     }
-    
+    table {
+    	text-align: center;
+    	padding:; 5px 0 5px 0;
+    	border: 3px solid darkblue;
+    	
+    }
     #work {
       background-image: url(http://www.gratisography.com/pictures/53_1.jpg);
       width:cover
@@ -67,7 +72,6 @@
 
 <body>
 <h1>Some of My Work</h1>
-<div class=images>
 	<table>
 <tr>
 <td><img src="http://i.imgur.com/L7jDgiv.jpg"alt="Chris Pratt Digital Illustration" height="425" /></td>
@@ -86,6 +90,5 @@
 <td><img src="http://i.imgur.com/a8RWNy8.jpg" alt="Headphones" height="425" /></td>
 </tr>
 </table>
-</div>
 </body>
 </html>
