--- a/portfolio.html
+++ b/portfolio.html
@@ -47,9 +47,13 @@
 	   margin-bottom: 30px;
     }
     table {
-    	text-align: center;
-    	padding:; 5px 0 5px 0;
-    	border: 3px solid darkblue;
+    	table-align: center;
+    	padding: 5px 0 5px 0;
+    	margin-top: 10px;
+    	margin-bottom:10px;
+    	margin-left:5px;
+    	margin-right:5px;
+    	
     	
     }
     #work {
