--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
   <nav>
   	<a href="about.html">About Me</a> | 
   	<a href="contact.html">Contact Me</a>
+  	<a href="resume.html">My Resume</a>
+  	<a href="portfolio.html">Sample Gallery</a>
   </nav>
 <h1>Ricky Delgado Design</h1>
 <h2>Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!</h2>
