--- a/portfolio.html
+++ b/portfolio.html
@@ -46,16 +46,11 @@
 	   letter-spacing: 20px;
 	   margin-bottom: 30px;
     }
-    table {
-    	table-align: center;
-    	padding: 5px 0 5px 0;
-    	margin-top: 10px;
-    	margin-bottom:10px;
-    	margin-left:5px;
-    	margin-right:5px;
-    	
-    	
-    }
+   table#table1 {
+    width:70%; 
+    margin-left:15%; 
+    margin-right:15%;
+  }
     #work {
       background-image: url(http://www.gratisography.com/pictures/53_1.jpg);
       width:cover
@@ -76,7 +71,7 @@
 
 <body>
 <h1>Some of My Work</h1>
-	<table>
+	<table id="table1">
 <tr>
 <td><img src="http://i.imgur.com/L7jDgiv.jpg"alt="Chris Pratt Digital Illustration" height="425" /></td>
  
