--- a/portfolio.html
+++ b/portfolio.html
@@ -70,23 +70,29 @@
 </head>
 
 <body>
+<nav>
+	<a href="Home.html">Home</a> | 
+  	<a href="about.html">About Me</a> |
+  	<a href="Contact.html">Contact Me</a> |
+  	<a href="resume.html">My Resume</a>
+</nav>	
 <h1>Some of My Work</h1>
 	<table id="table1">
 <tr>
-<td><img src="http://i.imgur.com/L7jDgiv.jpg"alt="Chris Pratt Digital Illustration" height="425" /></td>
+<td><img src="http://i.imgur.com/L7jDgiv.jpg"alt="Chris Pratt Digital Illustration" width="425" /></td>
  
-<td><img src="http://i.imgur.com/URdjjcd.jpg" alt="Color Manipulation Ad" height="425" /></td>
-<td><img src="http://i.imgur.com/4OYo536.jpg" alt="Album Cover Art" height="425" /></td>
+<td><img src="http://i.imgur.com/URdjjcd.jpg" alt="Color Manipulation Ad" width="425" /></td>
+<td><img src="http://i.imgur.com/4OYo536.jpg" alt="Album Cover Art" width="425" /></td>
 </tr>
 <tr>
-<td><img src="http://i.imgur.com/6az1jIV.jpg" alt="Nike AirMag Illustration" height="425" /></td>
-<td><img src="http://i.imgur.com/cPQrm8J.jpg" alt="Cologne Package/ Branding Design" height="425" /></td>
-<td><img src="http://i.imgur.com/WdjxIh3.jpg" alt="Digital Airbrushing" height="425" /></td>
+<td><img src="http://i.imgur.com/6az1jIV.jpg" alt="Nike AirMag Illustration" width="425" /></td>
+<td><img src="http://i.imgur.com/cPQrm8J.jpg" alt="Cologne Package/ Branding Design" width="425" /></td>
+<td><img src="http://i.imgur.com/WdjxIh3.jpg" alt="Digital Airbrushing" width="425" /></td>
 </tr>
 <tr>
-<td><img src="http://i.imgur.com/fPYyJmR.jpg" alt="Castle Group Marketing Logo" height="425" /></td>
-<td><img src="http://i.imgur.com/Fl55upD.jpg" alt="Image Manipulation/Patron Ad" height="425" /></td>
-<td><img src="http://i.imgur.com/a8RWNy8.jpg" alt="Headphones" height="425" /></td>
+<td><img src="http://i.imgur.com/fPYyJmR.jpg" alt="Castle Group Marketing Logo" width="425" /></td>
+<td><img src="http://i.imgur.com/Fl55upD.jpg" alt="Image Manipulation/Patron Ad" width="425" /></td>
+<td><img src="http://i.imgur.com/a8RWNy8.jpg" alt="Headphones" width="425" /></td>
 </tr>
 </table>
 </body>
