--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
   	a {
       text-decoration: none;
       color: #306 ;
+      font-si
     }
 	
 	a:hover {
@@ -50,6 +51,7 @@
     width:70%; 
     margin-left:15%; 
     margin-right:15%;
+    padding: 5px;
   }
     #work {
       background-image: url(http://www.gratisography.com/pictures/53_1.jpg);
@@ -79,20 +81,19 @@
 <h1>Some of My Work</h1>
 	<table id="table1">
 <tr>
-<td><img src="http://i.imgur.com/L7jDgiv.jpg"alt="Chris Pratt Digital Illustration" width="425" /></td>
- 
-<td><img src="http://i.imgur.com/URdjjcd.jpg" alt="Color Manipulation Ad" width="425" /></td>
-<td><img src="http://i.imgur.com/4OYo536.jpg" alt="Album Cover Art" width="425" /></td>
+<td><img src="http://i.imgur.com/L7jDgiv.jpg"alt="Chris Pratt Digital Illustration" width="320" /></td>
+ <td><img src="http://i.imgur.com/URdjjcd.jpg" alt="Color Manipulation Ad" width="320" /></td>
+<td><img src="http://i.imgur.com/4OYo536.jpg" alt="Album Cover Art" width="320" /></td>
 </tr>
 <tr>
-<td><img src="http://i.imgur.com/6az1jIV.jpg" alt="Nike AirMag Illustration" width="425" /></td>
-<td><img src="http://i.imgur.com/cPQrm8J.jpg" alt="Cologne Package/ Branding Design" width="425" /></td>
-<td><img src="http://i.imgur.com/WdjxIh3.jpg" alt="Digital Airbrushing" width="425" /></td>
+<td><img src="http://i.imgur.com/6az1jIV.jpg" alt="Nike AirMag Illustration" width="320" /></td>
+<td><img src="http://i.imgur.com/cPQrm8J.jpg" alt="Cologne Package/ Branding Design" width="320" /></td>
+<td><img src="http://i.imgur.com/WdjxIh3.jpg" alt="Digital Airbrushing" width="320" /></td>
 </tr>
 <tr>
-<td><img src="http://i.imgur.com/fPYyJmR.jpg" alt="Castle Group Marketing Logo" width="425" /></td>
-<td><img src="http://i.imgur.com/Fl55upD.jpg" alt="Image Manipulation/Patron Ad" width="425" /></td>
-<td><img src="http://i.imgur.com/a8RWNy8.jpg" alt="Headphones" width="425" /></td>
+<td><img src="http://i.imgur.com/fPYyJmR.jpg" alt="Castle Group Marketing Logo" width="320" /></td>
+<td><img src="http://i.imgur.com/Fl55upD.jpg" alt="Image Manipulation/Patron Ad" width="320" /></td>
+<td><img src="http://i.imgur.com/a8RWNy8.jpg" alt="Headphones" width="320" /></td>
 </tr>
 </table>
 </body>
