--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
 
 <body>
 <nav>
-	<a href="Home.html">Home</a> | 
+	<a href="index.html">Home</a> | 
   	<a href="about.html">About Me</a> |
   	<a href="Contact.html">Contact Me</a> |
   	<a href="resume.html">My Resume</a>
