--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 <section id="logo">  <img src="http://i.imgur.com/pP7mhWb.png" alt="Welcome!" width="200"></section>
   <nav>
   	<a href="about.html">About Me</a> | 
-  	<a href="contact.html">Contact Me</a>
-  	<a href="resume.html">My Resume</a>
+  	<a href="contact.html">Contact Me</a> |
+  	<a href="resume.html">My Resume</a> |
   	<a href="portfolio.html">Sample Gallery</a>
   </nav>
 <h1>Ricky Delgado Design</h1>
