--- a/resume.html
+++ b/resume.html
@@ -2,15 +2,13 @@
 <html>
 <head>
 <title>Ricky Delgado Resume</title>
+<link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
  <style>
-  
-    
-	
-	a {
+ 	a {
       text-decoration: none;
       color: #306 ;
     }
-	
 	a:hover {
 		color: #3F3;
 	}
