--- a/resume.html
+++ b/resume.html
@@ -39,6 +39,7 @@
       font-family: 'Megrim', cursive;
       font-size: 46px;
       text-shadow: 1px 1px 2px white;
+      text-align: center;
     }
     
     #work {
