--- a/resume.html
+++ b/resume.html
@@ -73,6 +73,10 @@
       margin-left:15%; 
       margin-right:15%;
     }
+    caption {
+    	text-align:center;
+    	font-size:46px;
+    }
   </style>
 </head>
 <body>
