--- a/resume.html
+++ b/resume.html
@@ -80,6 +80,12 @@
   </style>
 </head>
 <body>
+ <nav>
+	<a href="index.html">Home</a> | 
+  	<a href="about.html">About Me</a> |
+  	<a href="Contact.html">Contact Me</a> |
+  	<a href="portfolio.html">Portfolio</a>
+ </nav>	
 <h1> Resume</h1>
 <table>
   <caption>Experience</caption>
