--- a/resume.html
+++ b/resume.html
@@ -8,9 +8,11 @@
  	a {
       text-decoration: none;
       color: #306 ;
+      text-align:center;
     }
 	a:hover {
 		color: #3F3;
+		text-align:center;
 	}
     
     #logo {
