--- a/resume.html
+++ b/resume.html
@@ -8,11 +8,9 @@
  	a {
       text-decoration: none;
       color: #306 ;
-      text-align:center;
     }
 	a:hover {
 		color: #3F3;
-		text-align:center;
 	}
     
     #logo {
@@ -78,6 +76,9 @@
     caption {
     	text-align:center;
     	font-size:46px;
+    }
+    nav {
+    	text-align:center;
     }
   </style>
 </head>
