--- a/resume.html
+++ b/resume.html
@@ -83,7 +83,7 @@
  <nav>
 	<a href="index.html">Home</a> | 
   	<a href="about.html">About Me</a> |
-  	<a href="Contact.html">Contact Me</a> |
+  	<a href="contact.html">Contact Me</a> |
   	<a href="portfolio.html">Portfolio</a>
  </nav>	
 <h1> Resume</h1>
