--- a/portfolio.html
+++ b/portfolio.html
@@ -81,19 +81,19 @@
 <h1>Some of My Work</h1>
 	<table id="table1">
 <tr>
-<td><img src="http://i.imgur.com/L7jDgiv.jpg"alt="Chris Pratt Digital Illustration" width="300" /></td>
- <td><img src="http://i.imgur.com/URdjjcd.jpg" alt="Color Manipulation Ad" width="300" /></td>
-<td><img src="http://i.imgur.com/4OYo536.jpg" alt="Album Cover Art" width="300" /></td>
+<td><td style="text-align: center; vertical-align: middle;"><img src="http://i.imgur.com/L7jDgiv.jpg"alt="Chris Pratt Digital Illustration" width="300" /></td>
+ <td><td style="text-align: center; vertical-align: middle;"><img src="http://i.imgur.com/URdjjcd.jpg" alt="Color Manipulation Ad" width="300" /></td>
+<td><td style="text-align: center; vertical-align: middle;"><img src="http://i.imgur.com/4OYo536.jpg" alt="Album Cover Art" width="300" /></td>
 </tr>
 <tr>
-<td><img src="http://i.imgur.com/6az1jIV.jpg" alt="Nike AirMag Illustration" width="300" /></td>
-<td><img src="http://i.imgur.com/cPQrm8J.jpg" alt="Cologne Package/ Branding Design" width="300" /></td>
-<td><img src="http://i.imgur.com/WdjxIh3.jpg" alt="Digital Airbrushing" width="300" /></td>
+<td><td style="text-align: center; vertical-align: middle;"><img src="http://i.imgur.com/6az1jIV.jpg" alt="Nike AirMag Illustration" width="300" /></td>
+<td><td style="text-align: center; vertical-align: middle;"><img src="http://i.imgur.com/cPQrm8J.jpg" alt="Cologne Package/ Branding Design" width="300" /></td>
+<td><td style="text-align: center; vertical-align: middle;"><img src="http://i.imgur.com/WdjxIh3.jpg" alt="Digital Airbrushing" width="300" /></td>
 </tr>
 <tr>
-<td><img src="http://i.imgur.com/fPYyJmR.jpg" alt="Castle Group Marketing Logo" width="300" /></td>
-<td><img src="http://i.imgur.com/Fl55upD.jpg" alt="Image Manipulation/Patron Ad" width="300" /></td>
-<td><img src="http://i.imgur.com/a8RWNy8.jpg" alt="Headphones" width="300" /></td>
+<td><td style="text-align: center; vertical-align: middle;"><img src="http://i.imgur.com/fPYyJmR.jpg" alt="Castle Group Marketing Logo" width="300" /></td>
+<td><td style="text-align: center; vertical-align: middle;"><img src="http://i.imgur.com/Fl55upD.jpg" alt="Image Manipulation/Patron Ad" width="300" /></td>
+<td><td style="text-align: center; vertical-align: middle;"><img src="http://i.imgur.com/a8RWNy8.jpg" alt="Headphones" width="300" /></td>
 </tr>
 </table>
 </body>
