--- a/portfolio.html
+++ b/portfolio.html
@@ -52,6 +52,8 @@
     margin-left:15%; 
     margin-right:15%;
     padding: 5px;
+    border: 5px solid 4b0082;
+    box-shadow: 5px 5px 0px 0px;
   }
     #work {
       background-image: url(http://www.gratisography.com/pictures/53_1.jpg);
