--- a/portfolio.html
+++ b/portfolio.html
@@ -48,13 +48,15 @@
 	   margin-bottom: 30px;
     }
    table#table1 {
-    width:70%; 
-    margin-left:15%; 
-    margin-right:15%;
-    padding: 5px;
-    border: 5px solid 4b0082;
-    box-shadow: 5px 5px 0px 0px;
+	width: 75%;
+	margin-left: 10%;
+	margin-right: 15%;
+	padding: 5px;
+	border-collapse: collapse;     
   }
+  able, th, td {
+	border: 3px solid #330066;
+}
     #work {
       background-image: url(http://www.gratisography.com/pictures/53_1.jpg);
       width:cover
@@ -70,7 +72,7 @@
           text-align: center;
 	  background-repeat:no-repeat;
     }
- </style>
+  </style>
 </head>
 
 <body>
