--- a/portfolio.html
+++ b/portfolio.html
@@ -6,16 +6,16 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
   <style>
-  	a {
+  	a,img {
       text-decoration: none;
       color: #306 ;
       font-si
     }
 	
-	a:hover {
-		color: #3F3;
-	}
-    
+a:hover,img:hover {
+  background-color: #ffffff;
+  opacity: 0.6;
+}
     #logo {
 	color: #FFF;
 	background-image: url(http://i.imgur.com/IUEIOQm.jpg);
