--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     
     body {
       
+  	background-image:"http://i.imgur.com/ye5mXHs.jpg"
   	background: -webkit-linear-gradient(90deg, #614385 10%, #516395 90%); /* Chrome 10+, Saf5.1+ */
   	background:    -moz-linear-gradient(90deg, #614385 10%, #516395 90%); /* FF3.6+ */
   	background:     -ms-linear-gradient(90deg, #614385 10%, #516395 90%); /* IE10 */
