--- a/csstest.html
+++ b/csstest.html
@@ -61,7 +61,6 @@ body {
 
 .box * {
     position: relative;
-    /* hack */
 }
 
 h1 {
@@ -73,17 +72,17 @@ h1 {
 
 <h3>Hover a box</h3>
 
-<div class="box overlay red">
-  <h1>Text</h1>
+<div class="box overlay limegreen">
+  <h1Home</h1>
 </div>
-<div class="box overlay blue">
-    <h1>Text</h1>
-</div>
-<div class="box overlay green">
-    <h1>Text</h1>
+<div class="box overlay magenta">
+    <h1>Contact</h1>
 </div>
 <div class="box overlay orange">
-    <h1>Home</h1>
+    <h1>Resume</h1>
+</div>
+<div class="box overlay teal">
+    <h1>Portfolio</h1>
 </div>
 
 </body>
