--- a/csstest.html
+++ b/csstest.html
@@ -43,20 +43,20 @@ body {
   display: block;
 }
 
-.red:before {
-  background-color: rgba(255,0,0,0.5);
+.magenta:before {
+  background-color: rgba(255, 0, 255,0.5);
 }
 
-.blue:before {
-  background-color: rgba(0,0,255,0.5);
+.limegreen:before {
+  background-color: rgba(51, 204, 51,0.5);
 }
 
-.green:before{
-  background-color: rgba(0,255,0,0.5);
+.orange:before{
+  background-color: rgba(255, 102, 0,0.5);
 }
 
-.orange:before {
-  background-color: rgba(255,153,0, 0.5);
+.teal:before {
+  background-color: rgba(51, 204, 204, 0.5);
 }
 
 .box * {
