--- a/csstest.html
+++ b/csstest.html
@@ -73,7 +73,7 @@ h1 {
 <h3>Hover a box</h3>
 
 <div class="box overlay limegreen">
-  <h1Home</h1>
+  <h1></h1>Home</h1>
 </div>
 <div class="box overlay magenta">
     <h1>Contact</h1>
