--- a/csstest.html
+++ b/csstest.html
@@ -16,11 +16,11 @@ body {
 .box {
   width:100px;
   height:100px;
-  border:1px solid grey;
+  border:none;
   display: inline-block;
   vertical-align: top;
   margin-top: 10px;
-  background-image: url(http://lorempixel.com/output/food-q-c-100-100-10.jpg);
+  background-image:none;
   position: relative;
 }
 
