--- a/csstest.html
+++ b/csstest.html
@@ -68,7 +68,7 @@ body {
 }
 
 h2 {
-  color:rgb(25, 80, 108);
+  color:white;
   font-size: 24px;
   font-family: 'Titillium Web', sans-serif;
   text-shadow: 2px,2px,1px;
