--- a/csstest.html
+++ b/csstest.html
@@ -13,8 +13,9 @@
 
 body {
   text-align: center;
-  background-image: url(http://i.imgur.com/ye5mXHs.jpg);
+  background-image: url(http://i.imgur.com/ye5mXHs.jpg),.5;
   Background-size: cover;
+ 
   
 }
 .box {
