--- a/csstest.html
+++ b/csstest.html
@@ -13,14 +13,14 @@
 
 body {
   text-align: center;
-  background-image: url(http://i.imgur.com/ye5mXHs.jpg),.5;
+  background-image: url(http://i.imgur.com/ye5mXHs.jpg);
   Background-size: cover;
  
   
 }
 .box {
   width:100px;
-  height:100px;
+  height:50px;
   border:none;
   display: inline-block;
   vertical-align: top;
