--- a/csstest.html
+++ b/csstest.html
@@ -60,8 +60,14 @@ body {
   background-color: rgba(255, 102, 0,0.5);
 }
 
-.teal:before {
-  background-color: rgba(51, 204, 204, 0.5);
+.teal:before     height: 50px;
+    border: medium none;
+    display: inline-block;
+    vertical-align: top;
+    background-color: #2A756A;
+    position: relative;
+    width: 20%;
+    margin-left: 3.8%;
 }
 
 .box * {
