--- a/csstest.html
+++ b/csstest.html
@@ -60,7 +60,7 @@ body {
   background-color: rgba(255, 102, 0,0.5);
 }
 
-.teal:before     height: 50px;
+.teal:before{    height: 50px;
     border: medium none;
     display: inline-block;
     vertical-align: top;
