--- a/csstest.html
+++ b/csstest.html
@@ -21,12 +21,13 @@ body {
 .box {
   width:100px;
   height:50px;
-  border:none;
+  border: medium none;
   display: inline-block;
   vertical-align: top;
-  margin-top: 10px;
-  background-color:rgb(153, 0, 153);
-  position: relative;
+  background-color: #2A756A;
+    position: relative;
+    width: 20%;
+    margin-left: 3.8%;
 }
 
 .overlay {
@@ -60,14 +61,8 @@ body {
   background-color: rgba(255, 102, 0,0.5);
 }
 
-.teal:before{    height: 50px;
-    border: medium none;
-    display: inline-block;
-    vertical-align: top;
-    background-color: #2A756A;
-    position: relative;
-    width: 20%;
-    margin-left: 3.8%;
+.teal:before{
+  background-color: rgba(255, 102, 0,0.5);
 }
 
 .box * {
