--- a/csstest.html
+++ b/csstest.html
@@ -28,6 +28,9 @@ body {
     position: relative;
     width: 20%;
     margin-left: 3.8%;
+    border-radius:25px;
+    
+    
 }
 
 .overlay {
@@ -74,6 +77,12 @@ h2 {
   font-size: 24px;
   font-family: 'Titillium Web', sans-serif;
   text-shadow: 2px,2px,1px;
+  width:70%;
+  margin-left:auto;
+  margin-right:auto;
+  height:80%;
+  margin-top:auto;
+  margin-left:auto;
 }
 h2.hover {
   color:white;
