--- a/csstest.html
+++ b/csstest.html
@@ -59,14 +59,17 @@ body {
 
 .limegreen:before {
   background-color: rgba(51, 204, 51,0.5);
+  border-radius: 25px;
 }
 
 .orange:before{
   background-color: rgba(255, 102, 0,0.5);
+  border-radius: 25px;
 }
 
 .teal:before{
   background-color: rgba(255, 102, 0,0.5);
+  border-radius: 25px;
 }
 
 .box * {
