--- a/csstest.html
+++ b/csstest.html
@@ -68,7 +68,7 @@ body {
 }
 
 .teal:before{
-  background-color: rgba(255, 102, 0,0.5);
+  background-color: rgba(51, 165, 193, 0.5);
   border-radius: 25px;
 }
 
@@ -101,7 +101,7 @@ h2.hover {
 <h3>Hover a box</h3>
 
 <div class="box overlay limegreen">
-  <h2>Home</h2>
+  <h2><a href="http:/rickydelgadomiami.me/index">Home</a></h2>
 </div>
 <div class="box overlay magenta">
     <h2>Contact</h2>
