--- a/csstest.html
+++ b/csstest.html
@@ -94,6 +94,13 @@ h2.hover {
   font-family: 'Titillium Web', sans-serif;
   text-shadow: 2px,2px,1px;
 }
+a{
+  text-decoration:none
+  color:white;
+  font-size: 24px;
+  font-family: 'Titillium Web', sans-serif;
+  text-shadow: 2px,2px,1px;;
+}
 </style>
 <body>
 
