--- a/csstest.html
+++ b/csstest.html
@@ -95,7 +95,7 @@ h2.hover {
   text-shadow: 2px,2px,1px;
 }
 a{
-  text-decoration:none
+  text-decoration:none;
   color:white;
   font-size: 24px;
   font-family: 'Titillium Web', sans-serif;
