--- a/csstest.html
+++ b/csstest.html
@@ -108,16 +108,16 @@ a{
 <h3>Hover a box</h3>
 
 <div class="box overlay limegreen">
-  <h2><a href="http:/rickydelgadomiami.me/index">Home</a></h2>
+  <h2><a href="http:/rickydelgadomiami.me">Home</a></h2>
 </div>
 <div class="box overlay magenta">
-    <h2>Contact</h2>
+    <h2><a href="http:/rickydelgadomiami.me/contact">Contact Me</a></h2>
 </div>
 <div class="box overlay orange">
-    <h2>Resume</h2>
+    <h2><a href="http:/rickydelgadomiami.me/resume">Resume</a></h2>
 </div>
 <div class="box overlay teal">
-    <h2>Portfolio</h2>
+    <h2><a href="http:/rickydelgadomiami.me/portfolio">My Portfolio</h2>
 </div>
 
 </body>
