--- a/csstest.html
+++ b/csstest.html
@@ -108,7 +108,7 @@ a{
 <h3>Hover a box</h3>
 
 <div class="box overlay limegreen">
-  <h2> <a href="http://www.rickydelgadomiami.me">Home</a> </h2>
+  <h2>  <a href="http://www.w3schools.com">Visit W3Schools</a>  </h2>
 </div>
 <div class="box overlay magenta">
     <h2><a href="//contact.html">Contact Me</a></h2>
