--- a/csstest.html
+++ b/csstest.html
@@ -111,13 +111,13 @@ a{
   <h2>  <a href="http://rickydelgadomiami.me/">Home</a>  </h2>
 </div>
 <div class="box overlay magenta">
-    <h2><a href="//contact.html">Contact Me</a></h2>
+    <h2> <a href="http://rickydelgadomiami.me/contact">Contact</a> </h2>
 </div>
 <div class="box overlay orange">
-    <h2><a href="//resume.html">Resume</a></h2>
+    <h2> <a href="http://rickydelgadomiami.me/aboutme">About Me</a> </h2>
 </div>
 <div class="box overlay teal">
-    <h2><a href="//portfolio.html">My Portfolio</h2>
+    <h2> <a href="http://rickydelgadomiami.me/portfolio">Portfolio</a> </h2>
 </div>
 
 </body>
