--- a/csstest.html
+++ b/csstest.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <title>Ricky Delgado Graphic Design Resume</title>
   <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,700' rel='stylesheet' type='text/css'>
 <style>
 
@@ -101,13 +102,18 @@ a{
   font-family: 'Titillium Web', sans-serif;
   text-shadow: 2px,2px,1px;;
 }
+h1 {
+  font-size:160;
+  width:80%;
+  margin-left:10%;
+  margin-right:10%;
+  color:rgb(252, 252, 252);
+  text-shadow: 5px 2px 2px white;
+}
+
 </style>
 <body>
-
-
-<h3>Hover a box</h3>
-
-<div class="box overlay limegreen">
+<nav><div class="box overlay limegreen">
   <h2>  <a href="http://rickydelgadomiami.me/">Home</a>  </h2>
 </div>
 <div class="box overlay magenta">
@@ -119,6 +125,13 @@ a{
 <div class="box overlay teal">
     <h2> <a href="http://rickydelgadomiami.me/portfolio">Portfolio</a> </h2>
 </div>
+</nav>
+
+<h1>Ricardo Delgado Graphic Design</h1>
+
+<section>
+  
+</section>
 
 </body>
 </html>
