--- a/csstest.html
+++ b/csstest.html
@@ -103,12 +103,14 @@ a{
   text-shadow: 2px,2px,1px;;
 }
 h1 {
-  font-size:160;
+  font-size:180;
   width:80%;
   margin-left:10%;
   margin-right:10%;
   color:rgb(252, 252, 252);
-  text-shadow: 5px 2px 2px white;
+  text-shadow: 3px 2px 2px white;
+  font-family: 'Titillium Web', sans-serif;
+  
 }
 
 </style>
