--- a/csstest.html
+++ b/csstest.html
@@ -103,7 +103,7 @@ a{
   text-shadow: 2px,2px,1px;;
 }
 h1 {
-  font-size:400;
+  font-size: 220px;
   width:80%;
   margin-left:10%;
   margin-right:10%;
