--- a/csstest.html
+++ b/csstest.html
@@ -128,7 +128,7 @@ h1 {
 </div>
 </nav>
 
-<h1>Ricardo Delgado Graphic Design</h1>
+<section id="header title"> <h1>Ricardo Delgado Graphic Design</h1> </section>
 
 <section>
   
