--- a/csstest.html
+++ b/csstest.html
@@ -103,13 +103,15 @@ a{
   text-shadow: 2px,2px,1px;;
 }
 h1 {
-  font-size: 34px;
+  font-size: 45px;
   width:80%;
   margin-left:10%;
   margin-right:10%;
   color:rgb(252, 252, 252);
   text-shadow: 1px 1px 1px white;
   font-family: 'Titillium Web', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
 </style>
