--- a/csstest.html
+++ b/csstest.html
@@ -12,6 +12,9 @@
   box-sizing: border-box;
 }
 
+#headertitle{
+  background-color:rgba(227, 227, 227,.8);
+}
 body {
   text-align: center;
   background-image: url(http://i.imgur.com/ye5mXHs.jpg);
@@ -130,7 +133,7 @@ h1 {
 </div>
 </nav>
 
-<section id="header title"> <h1>Ricardo Delgado Graphic Design</h1> </section>
+<section id="headertitle"> <h1>Ricardo Delgado Graphic Design</h1> </section>
 
 <section>
   
