--- a/csstest.html
+++ b/csstest.html
@@ -13,7 +13,8 @@
 }
 
 #headertitle{
-  background-color:rgba(227, 227, 227,.8);
+  background-color:rgba(127, 127, 127),.8);
+  border-radius:25px;
 }
 body {
   text-align: center;
