--- a/csstest.html
+++ b/csstest.html
@@ -15,6 +15,7 @@
 #headertitle{
   background-color:rgba(127, 127, 127,.8);
   border-radius:25px;
+  border: solid 2px rgba(61, 61, 92,.8);
 }
 body {
   text-align: center;
