--- a/csstest.html
+++ b/csstest.html
@@ -13,9 +13,10 @@
 }
 
 #headertitle{
-  background-color:rgba(127, 127, 127,.8);
+  background-color:rgba(12, 12, 18.8);
   border-radius:25px;
   border: solid 2px rgba(61, 61, 92,.8);
+  height:100px;
 }
 body {
   text-align: center;
