--- a/csstest.html
+++ b/csstest.html
@@ -17,7 +17,7 @@
   border-radius:25px;
   border: solid 2px rgba(61, 61, 92,.8);
   height:100px;
-  padding: 5px;
+  padding: auto;
 }
 body {
   text-align: center;
