--- a/csstest.html
+++ b/csstest.html
@@ -15,7 +15,7 @@
 #headertitle{
   background-color: rgba(12, 12, 18.8);
   border-radius:25px;
-  border: solid 2px rgba(61, 61, 92,.8);
+  border: solid 5px rgb(61, 61, 92);
   height:100px;
   padding: auto;
 }
@@ -23,8 +23,6 @@ body {
   text-align: center;
   background-image: url(http://i.imgur.com/ye5mXHs.jpg);
   Background-size: cover;
- 
-  
 }
 .box {
   width:100px;
