--- a/csstest.html
+++ b/csstest.html
@@ -16,8 +16,9 @@
   background-color: rgba(12, 12, 18.8);
   border-radius:25px;
   border: solid 5px rgb(61, 61, 92);
-  height:100px;
-  padding: auto;
+  height:75px;
+  padding: 10px;
+  margin-bottom: 15px;
 }
 body {
   text-align: center;
