--- a/csstest.html
+++ b/csstest.html
@@ -12,11 +12,10 @@
   box-sizing: border-box;
 }
 
-#headertitle{
-  background-color: rgba(12, 12, 18.8);
-  border-radius:25px;
-  border: solid 5px rgb(61, 61, 92);
-  height:75px;
+#headertitle {
+  background-color: rgba(2, 2, 4,.9);
+  border-radius: 25px;
+  height: 75px;
 }
 body {
   text-align: center;
