--- a/csstest.html
+++ b/csstest.html
@@ -11,6 +11,30 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+#contenthome {
+background: -moz-linear-gradient(top, rgba(6,7,30,1) 0%, rgba(125,185,232,0) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(6,7,30,1)), color-stop(100%,rgba(125,185,232,0))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, rgba(6,7,30,1) 0%,rgba(125,185,232,0) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(6,7,30,1) 0%,rgba(125,185,232,0) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(6,7,30,1) 0%,rgba(125,185,232,0) 100%); /* IE10+ */
+background: linear-gradient(to bottom, rgba(6,7,30,1) 0%,rgba(125,185,232,0) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#06071e', endColorstr='#007db9e8',GradientType=0 ); /* IE6-9 */
+;
+  font-size: 25px;
+  width:80%;
+  margin-left:10%;
+  margin-right:50%%;
+  color:rgb(252, 252, 252);
+  text-shadow: 1px 1px 1px black;
+  font-family: 'Titillium Web', sans-serif;
+  text-transform: none;
+  letter-spacing: 1.5px;
+  height:60%
+  margin-top:20%;
+  margin-bottom: 20%;
+  width: 80%
+  margin-left, margin-right: 10%;
+}
 
 #headertitle {
   background-color: rgba(2, 2, 4,.9);
