--- a/csstest.html
+++ b/csstest.html
@@ -11,6 +11,7 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+
 #contenthome {
 background: -moz-linear-gradient(top, rgba(6,7,30,1) 0%, rgba(125,185,232,0) 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(6,7,30,1)), color-stop(100%,rgba(125,185,232,0))); /* Chrome,Safari4+ */
@@ -159,8 +160,10 @@ h1 {
 
 <section id="headertitle"> <h1>Ricardo Delgado Graphic Design</h1> </section>
 
-<section>
-  
+<section id=contenthome>
+Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!
+<p>My name is Ricky and I am a graphic designer based in sunny Miami, Florida.</p>
+<p>For contact information check out my contact page! </p>
 </section>
 
 </body>
