--- a/csstest.html
+++ b/csstest.html
@@ -38,7 +38,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#06071e', end
 }
 
 #headertitle {
-  background-color: rgba(2, 2, 4,.9);
+  background-color: rgba(53, 53, 54,0.9);
   border-radius: 25px;
   height: 75px;
 }
@@ -167,4 +167,9 @@ Welcome to my site! Here you can find multiple ways to contact me or check out m
 </section>
 
 </body>
+<footer>
+  <a class="instagram_square32 tsc_social_square32" title="instagram" href="instagram.com/rickydelgadomia">Follow Me on Instagram!</a>
+  <a class="facebook_square32 tsc_social_square32" title="facebook" href="">https://www.facebook.com/rickydelgadojunior</a>
+  <a class="twitter2_square32 tsc_social_square32" title="twitter" href="twitter.com/rickydelgadomia">twitter</a>
+</footer>
 </html>
