--- a/csstest.html
+++ b/csstest.html
@@ -38,13 +38,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#06071e', end
 }
 
 #headertitle {
-background: -moz-linear-gradient(top, rgba(75,152,161,0) 0%, rgba(75,152,161,0.8) 15%, rgba(75,152,161,1) 19%, rgba(75,152,161,1) 20%, rgba(47,136,137,1) 50%, rgba(90,165,174,1) 80%, rgba(90,165,174,1) 81%, rgba(90,165,174,0.8) 85%, rgba(90,165,174,0) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(75,152,161,0)), color-stop(15%,rgba(75,152,161,0.8)), color-stop(19%,rgba(75,152,161,1)), color-stop(20%,rgba(75,152,161,1)), color-stop(50%,rgba(47,136,137,1)), color-stop(80%,rgba(90,165,174,1)), color-stop(81%,rgba(90,165,174,1)), color-stop(85%,rgba(90,165,174,0.8)), color-stop(100%,rgba(90,165,174,0))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, rgba(75,152,161,0) 0%,rgba(75,152,161,0.8) 15%,rgba(75,152,161,1) 19%,rgba(75,152,161,1) 20%,rgba(47,136,137,1) 50%,rgba(90,165,174,1) 80%,rgba(90,165,174,1) 81%,rgba(90,165,174,0.8) 85%,rgba(90,165,174,0) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, rgba(75,152,161,0) 0%,rgba(75,152,161,0.8) 15%,rgba(75,152,161,1) 19%,rgba(75,152,161,1) 20%,rgba(47,136,137,1) 50%,rgba(90,165,174,1) 80%,rgba(90,165,174,1) 81%,rgba(90,165,174,0.8) 85%,rgba(90,165,174,0) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, rgba(75,152,161,0) 0%,rgba(75,152,161,0.8) 15%,rgba(75,152,161,1) 19%,rgba(75,152,161,1) 20%,rgba(47,136,137,1) 50%,rgba(90,165,174,1) 80%,rgba(90,165,174,1) 81%,rgba(90,165,174,0.8) 85%,rgba(90,165,174,0) 100%); /* IE10+ */
-background: linear-gradient(to bottom, rgba(75,152,161,0) 0%,rgba(75,152,161,0.8) 15%,rgba(75,152,161,1) 19%,rgba(75,152,161,1) 20%,rgba(47,136,137,1) 50%,rgba(90,165,174,1) 80%,rgba(90,165,174,1) 81%,rgba(90,165,174,0.8) 85%,rgba(90,165,174,0) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#004b98a1', endColorstr='#005aa5ae',GradientType=0 ); /* IE6-9 */
+background: rgb(178,234,206); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(178,234,206,1) 0%, rgba(44,118,119,1) 50%, rgba(187,237,226,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(178,234,206,1)), color-stop(50%,rgba(44,118,119,1)), color-stop(100%,rgba(187,237,226,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom, rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2eace', endColorstr='#bbede2',GradientType=0 ); /* IE6-9 *
 }
 body {
   text-align: center;
