--- a/csstest.html
+++ b/csstest.html
@@ -38,6 +38,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#06071e', end
 }
 
 #headertitle {
+width: 100%;
 background: rgb(178,234,206); /* Old browsers */
 background: -moz-linear-gradient(top, rgba(178,234,206,1) 0%, rgba(44,118,119,1) 50%, rgba(187,237,226,1) 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(178,234,206,1)), color-stop(50%,rgba(44,118,119,1)), color-stop(100%,rgba(187,237,226,1))); /* Chrome,Safari4+ */
@@ -47,6 +48,7 @@ background: -ms-linear-gradient(top, rgba(178,234,206,1) 0%,rgba(44,118,119,1) 5
 background: linear-gradient(to bottom, rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2eace', endColorstr='#bbede2',GradientType=0 ); /* IE6-9 *
 }
+
 body {
   text-align: center;
   background-image: url(http://i.imgur.com/ye5mXHs.jpg);
