--- a/csstest.html
+++ b/csstest.html
@@ -46,8 +46,7 @@ background: -webkit-linear-gradient(top, rgba(178,234,206,1) 0%,rgba(44,118,119,
 background: -o-linear-gradient(top, rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* Opera 11.10+ */
 background: -ms-linear-gradient(top, rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* IE10+ */
 background: linear-gradient(to bottom, rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2eace', endColorstr='#bbede2',GradientType=0 ); /* IE6-9 *
-}
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2eace', endColorstr='#bbede2',GradientType=0 );
 
 body {
   text-align: center;
@@ -148,7 +147,6 @@ h1 {
   text-transform: uppercase;
   letter-spacing: 2px;
 }
-
 </style>
 <body>
 <nav><div class="box overlay limegreen">
