--- a/csstest.html
+++ b/csstest.html
@@ -4,14 +4,11 @@
   <title>Ricky Delgado Graphic Design Resume</title>
   <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,700' rel='stylesheet' type='text/css'>
 <style>
-
-
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-
 #contenthome {
 background: -moz-linear-gradient(top, rgba(6,7,30,1) 0%, rgba(125,185,232,0) 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(6,7,30,1)), color-stop(100%,rgba(125,185,232,0))); /* Chrome,Safari4+ */
@@ -36,16 +33,17 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#06071e', end
   width: 80%
   margin-left, margin-right: 10%;
 }
-
 #headertitle {
 background: rgb(178,234,206); /* Old browsers */
-background: -moz-linear-gradient(top, rgba(178,234,206,1) 0%, rgba(44,118,119,1) 50%, rgba(187,237,226,1) 100%); /* FF3.6+ */
+background: -moz-linear-gradient(top,  rgba(178,234,206,1) 0%, rgba(44,118,119,1) 50%, rgba(187,237,226,1) 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(178,234,206,1)), color-stop(50%,rgba(44,118,119,1)), color-stop(100%,rgba(187,237,226,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom, rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2eace', endColorstr='#bbede2',GradientType=0 );
+background: -webkit-linear-gradient(top,  rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2eace', endColorstr='#bbede2',GradientType=0 ); /* IE6-9 */
+
+}
 body {
   text-align: center;
   background-image: url(http://i.imgur.com/ye5mXHs.jpg);
@@ -65,11 +63,9 @@ body {
     
     
 }
-
 .overlay {
   position: relative;
 }
-
 .overlay:before{
   position: absolute;
   content:" ";
@@ -80,35 +76,28 @@ body {
   display: none;
   z-index:0;
 }
-
 .overlay:hover:before{
   display: block;
 }
-
 .magenta:before {
   background-color: rgba(255, 0, 255,1.0);
   border-radius:25px;
 }
-
 .limegreen:before {
   background-color: rgba(51, 204, 51,1.0);
   border-radius: 25px;
 }
-
 .orange:before{
   background-color: rgba(255, 102, 0,1.0);
   border-radius: 25px;
 }
-
 .teal:before{
   background-color: rgba(51, 165, 193, 1.0);
   border-radius: 25px;
 }
-
 .box * {
     position: relative;
 }
-
 h2 {
   color:white;
   font-size: 24px;
