--- a/csstest.html
+++ b/csstest.html
@@ -42,6 +42,7 @@ background: -o-linear-gradient(top,  rgba(178,234,206,1) 0%,rgba(44,118,119,1) 5
 background: -ms-linear-gradient(top,  rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* IE10+ */
 background: linear-gradient(to bottom,  rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2eace', endColorstr='#bbede2',GradientType=0 ); /* IE6-9 */
+size: 85px;
 
 }
 body {
