--- a/csstest.html
+++ b/csstest.html
@@ -3,6 +3,7 @@
 <head>
   <title>Ricky Delgado Graphic Design Resume</title>
   <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Exo+2:400,200' rel='stylesheet' type='text/css'>
 <style>
 * {
   -webkit-box-sizing: border-box;
@@ -131,7 +132,7 @@ h1 {
   margin-right:10%;
   color:rgb(252, 252, 252);
   text-shadow: 1px 1px 1px white;
-  font-family: 'Titillium Web', sans-serif;
+  font-family: 'Exo 2', sans-serif;
   text-transform: uppercase;
   letter-spacing: 2px;
 }
