--- a/csstest.html
+++ b/csstest.html
@@ -132,7 +132,7 @@ h1 {
   margin-right:10%;
   color:rgb(252, 252, 252);
   text-shadow: 1px 1px 1px white;
-  font-family: 'Exo 2', sans-serif;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   text-transform: uppercase;
   letter-spacing: 2px;
 }
