--- a/csstest.html
+++ b/csstest.html
@@ -138,7 +138,7 @@ h1 {
 }
 </style>
 <body>
-<nav><div class="box overlay limegreen">
+<nav><div class="nav nav-pills overlay limegreen">
   <h2>  <a href="http://rickydelgadomiami.me/">Home</a>  </h2>
 </div>
 <div class="box overlay magenta">
