--- a/csstest.html
+++ b/csstest.html
@@ -141,13 +141,13 @@ h1 {
 <nav><div class="nav nav-pills overlay limegreen">
   <h2>  <a href="http://rickydelgadomiami.me/">Home</a>  </h2>
 </div>
-<div class="box overlay magenta">
+<div class="nav nav-pills overlay magenta">
     <h2> <a href="http://rickydelgadomiami.me/contact">Contact</a> </h2>
 </div>
-<div class="box overlay orange">
+<div class="nav nav-pills overlay orange">
     <h2> <a href="http://rickydelgadomiami.me/aboutme">About Me</a> </h2>
 </div>
-<div class="box overlay teal">
+<div class="nav nav-pills teal">
     <h2> <a href="http://rickydelgadomiami.me/portfolio">Portfolio</a> </h2>
 </div>
 </nav>
