--- a/csstest.html
+++ b/csstest.html
@@ -138,16 +138,16 @@ h1 {
 }
 </style>
 <body>
-<nav><div class="nav nav-pills overlay limegreen">
+<nav><div class="box overlay limegreen">
   <h2>  <a href="http://rickydelgadomiami.me/">Home</a>  </h2>
 </div>
-<div class="nav nav-pills overlay magenta">
+<div class="box overlay magenta">
     <h2> <a href="http://rickydelgadomiami.me/contact">Contact</a> </h2>
 </div>
-<div class="nav nav-pills overlay orange">
+<div class="box overlay orange">
     <h2> <a href="http://rickydelgadomiami.me/aboutme">About Me</a> </h2>
 </div>
-<div class="nav nav-pills teal">
+<div class="box overlay teal">
     <h2> <a href="http://rickydelgadomiami.me/portfolio">Portfolio</a> </h2>
 </div>
 </nav>
