--- a/csstest.html
+++ b/csstest.html
@@ -35,14 +35,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#06071e', end
   margin-left, margin-right: 10%;
 }
 #headertitle {
-background: rgb(178,234,206); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(178,234,206,1) 0%, rgba(44,118,119,1) 50%, rgba(187,237,226,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(178,234,206,1)), color-stop(50%,rgba(44,118,119,1)), color-stop(100%,rgba(187,237,226,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom,  rgba(178,234,206,1) 0%,rgba(44,118,119,1) 50%,rgba(187,237,226,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2eace', endColorstr='#bbede2',GradientType=0 ); /* IE6-9 */
+background-color:rgba(0, 0, 0,.8);
 size: 85px;
 
 }
@@ -130,7 +123,8 @@ h1 {
   width:80%;
   margin-left:10%;
   margin-right:10%;
-  color:rgb(252, 252, 252);
+  rgba(238, 238, 238,0.9);
+  font-weight:normal;
   text-shadow: 1px 1px 1px white;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   text-transform: uppercase;
