--- a/csstest.html
+++ b/csstest.html
@@ -36,7 +36,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#06071e', end
 }
 #headertitle {
 background-color:rgba(0, 0, 0,.8);
-size: 285px;
+height: 285px;
 
 }
 body {
