--- a/csstest.html
+++ b/csstest.html
@@ -36,7 +36,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#06071e', end
 }
 #headertitle {
 background-color:rgba(0, 0, 0,.8);
-height: 285px;
+height: 150px;
 
 }
 body {
@@ -123,7 +123,7 @@ h1 {
   width:80%;
   margin-left:10%;
   margin-right:10%;
-  rgba(238, 238, 238,0.9);
+  color: rgba(238, 238, 238,0.9);
   font-weight:normal;
   text-shadow: 1px 1px 1px white;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
