--- a/csstest.html
+++ b/csstest.html
@@ -34,6 +34,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#06071e', end
   width: 80%
   margin-left, margin-right: 10%;
 }
+.#headertitle h1{
+  padding: 16px;
+}
+
 #headertitle {
 background-color:rgba(0, 0, 0,.8);
 height: 150px;
