--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 <a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951" target="_blank">
 <img alt="Linkedin" src="http://i.imgur.com/OG6a8lm.png" width="50" height="50"></a>
 <a href="https://www.facebook.com/rickydelgadojunior" target="_blank">
-<img alt="Facebook" src="http://i.imgur.com/kX0UajV.png" width="50" height="50"></a>
+<img alt="Facebook" src=<i class="fa fa-facebook-official"></i>
+ width="50" height="50"></a>
 <a href="https://twitter.com/RickyDelgadoMIA" target="_blank">
 <img alt="Twitter" src="http://i.imgur.com/eeDJ0FM.png" width="50" height="50"></a>
 </body>
