--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
   	<a href="resume.html">My Resume</a> |
   	<a href="portfolio.html">Sample Gallery</a>
   </nav>
-<h1>Ricky Delgado Design</h1>
+<h1><i class="fa fa-camera"></i> <i class="fa fa-gamepad"></i> <i class="fa fa-picture-o"></i>
+Ricky Delgado Design</h1>
 <h2>Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!</h2>
 
 <section id="type">
