--- a/index.html
+++ b/index.html
@@ -2,13 +2,49 @@
 
 <head>
 <title>Ricky Delgado</title>
-
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
   <style>
   
     
-	
+ul {
+    overflow: auto;
+}
+ 
+ul li {
+    list-style-type: none;
+    float: left;
+}
+ 
+ul li a i {
+    background: #205D7A;
+    color: #fff;
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    font-size: 25px;
+    text-align: center;
+    margin-right: 10px;
+    padding-top: 15%;
+    transition: all 0.2s ease-in-out;
+}
+
+.fa-facebook {
+    background:#3b5998
+} 
+.fa-linkedin {
+    background:#007bb6
+}
+.fa-twitter {
+    background:#00aced
+}
+.google-plus {
+    background:#dd4b39
+}
+ul li a i:hover {
+    opacity: .7;
+}
 	a {
       text-decoration: none;
       color: #306 ;
@@ -87,10 +123,12 @@
 <section id="work">
   <button>See my work!</button>
 </section>
-<a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951" target="_blank">
-<img alt="Linkedin" src="http://i.imgur.com/OG6a8lm.png" width="50" height="50"></a>
-<a href="https://www.facebook.com/rickydelgadojunior" target="_blank">
-<img alt="Facebook" src="http://i.imgur.com/kX0UajV.png" width="50" height="50"></a>
-<a href="https://twitter.com/RickyDelgadoMIA" target="_blank">
-<img alt="Twitter" src="http://i.imgur.com/eeDJ0FM.png" width="50" height="50"></a>
+
+<ul>
+    <li><a href="http://facebook.com/"><i class="fa fa-facebook"></i></a></li>
+    <li><a href="http://linkedin.com/"><i class="fa fa-linkedin"></i></a></li>
+    <li><a href="http://twitter.com/"><i class="fa fa-twitter"></i></a></li>
+    <li><a href="http://plus.google.com/"><i class="fa fa-google-plus"></i> </a></li>
+</ul>
+
 </body>
