--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@ ul li a i:hover {
 </section>
 
 <ul>
-    <li><a href="http://facebook.com/"><i class="fa fa-facebook"></i></a></li>
-    <li><a href="http://linkedin.com/"><i class="fa fa-linkedin"></i></a></li>
-    <li><a href="http://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-    <li><a href="http://plus.google.com/"><i class="fa fa-google-plus"></i> </a></li>
+    <li><a href="https://www.facebook.com/rickydelgadojunior"><i class="fa fa-facebook"></i></a></li>
+    <li><a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951"><i class="fa fa-linkedin"></i></a></li>
+    <li><a href="https://twitter.com/RickyDelgadoMIA"><i class="fa fa-twitter"></i></a></li>
+    <li><a href="https://plus.google.com/u/0/117662504780521599168/posts"><i class="fa fa-google-plus"></i> </a></li>
 </ul>
 
 </body>
