--- a/csstest.html
+++ b/csstest.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Ricky Delgado Graphic Design Resume</title>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Exo+2:400,200' rel='stylesheet' type='text/css'>
 <style>
