--- a/resume.html
+++ b/resume.html
@@ -86,7 +86,7 @@
   	<a href="contact.html">Contact Me</a> |
   	<a href="portfolio.html">Portfolio</a>
  </nav>	
- <iframe src="http://camilacodino.me"></iframe>
+ <iframe src="ricky delgado resume.pdf"></iframe>
 <h1> Resume</h1>
 <table>
   <caption>Experience</caption>
