--- a/resume.html
+++ b/resume.html
@@ -77,6 +77,11 @@
     	text-align:center;
     	font-size:46px;
     }
+    
+    iframe {
+    	height:80%;
+    	width:80%;
+    }
   </style>
 </head>
 <body>
