--- a/resume.html
+++ b/resume.html
@@ -73,11 +73,6 @@
       margin-left:15%; 
       margin-right:15%;
     }
-    iframe {
-    	height:100%;
-    	width:100%;
-    }
-    
     caption {
     	text-align:center;
     	font-size:46px;
@@ -91,7 +86,7 @@
   	<a href="contact.html">Contact Me</a> |
   	<a href="portfolio.html">Portfolio</a>
  </nav>	
- <iframe src="Ricky Delgado Resume.pdf"></iframe>
+ <iframe src="Ricky Delgado Resume.pdf" seamless height="100%" width="100%"></iframe>
 <h1> Resume</h1>
 <table>
   <caption>Experience</caption>
