--- a/resume.html
+++ b/resume.html
@@ -77,6 +77,14 @@
     	text-align:center;
     	font-size:46px;
     }
+    
+    iframe {
+    	height: 100%";
+    	width: 100%";
+    	margin: 0 auto;
+    	display: block;
+    }
+    }
   </style>
 </head>
 <body>
@@ -86,91 +94,8 @@
   	<a href="contact.html">Contact Me</a> |
   	<a href="portfolio.html">Portfolio</a>
  </nav>	
- <iframe src="Ricky Delgado Resume.pdf" seamless height="100%" width="100%"></iframe>
 <h1> Resume</h1>
-<table>
-  <caption>Experience</caption>
-  <tr>
-    <td>Company: Castle Group Marketing</td>
-    <td>City: Miami</td>
-  </tr>
-  <tr>
-  <td>Job Title: Chief Marketing Director</td>
-  <td>From: March 2011 To: Present</td>
-  </tr>
-  <tr>
-    <td>Description: 
-    <ul>
-    <li>In charge of overseeing all marketing and promotional efforts including the creation of custom graphics and logos for clientele as well as internally.</li>
-    <li>Updating social media accounts including the internal accounts</li>
-    <li>Create custom content using Adobe CC</li>
-    </ul>
-    </td>
-  </tr>
-  <tr>
-    <td>Company: Miami Marketing Group</td>
-    <td>City: Miami Beach</td>
-  </tr>
-  <tr>
-  <td>Job Title: Promotional Team Manager</td>
-  <td>From:April 2012 To: Present</td>
-  </tr>
-  <tr>
-    <td>Description: 
-    <ul>
-    <li>Hiring and managing promotional staff</li>
-    <li>Create social media content and post updates daily</li>
-    <li>Reach out to possible clientele and open new accounts</li>
-    </ul>
-    </td>
-  </tr>
-  <tr>
-    <td>Fontainebleau Resort (LIV Nightclub)</td>
-    <td>City: Miami Beach</td>
-  </tr>
-  <tr>
-  <td>Job Title: VIP Host</td>
-  <td>From: April 2012 To: Present</td>
-  </tr>
-  <tr>
-    <td>Description: 
-    <ul>
-    <li>Reach out to high end clientele </li>
-    <li>Create and update table reservations using Nightpro reservation software</li>
-    <li>Create and maintain good rapport with regular and returning clientele </li>
-    </ul>
-    </td>
-  </tr>
-</table>
-
-<table>
-  <caption>Education</caption>
-  <tr>
-    <td>School: Miami International University of Art & Design</td>
-    <td>Expected Graduation: Spring 2017</td>
-  </tr>
-  <tr>
-  <td>Miami, FL</td>
-  </tr>
-  <tr>
-    <td>Major: Graphic and Web Design (Graphic Track)
-    </td>
-    <td>Degree: Bachelor's of Fine Arts Degree</td>
-  </tr>
-  <tr>
-    <td> School:Florida International University</td>
-    <td>Expected Graduation: Fall 2017</td>
-  </tr>
-  <tr>
-  <td>Miami, FL</td>
-  </tr>
-  <tr>
-    <td>Major: Marketing
-    </td>
-    <td>Degree: Bachelor's of Science Degree</td>
-  </tr>
-  
-</table>
+<iframe src="Ricky Delgado Resume.pdf"></iframe>
 
 </body>
 </html>
