--- a/resume.html
+++ b/resume.html
@@ -79,8 +79,8 @@
     }
     
     iframe {
-    	height: 100%";
-    	width: 100%";
+    	height: 1300px";
+    	width: 1000px";
     	margin: 0 auto;
     	display: block;
     }
