--- a/resume.html
+++ b/resume.html
@@ -79,11 +79,10 @@
     }
     
     iframe {
-    	height: 1300px";
-    	width: 1000px";
+    	height: 500px;
+    	width: 400px;
     	margin: 0 auto;
     	display: block;
-    }
     }
   </style>
 </head>
