--- a/resume.html
+++ b/resume.html
@@ -79,8 +79,8 @@
     }
     
     iframe {
-    	height: 500px;
-    	width: 400px;
+    	height: 1000px;
+    	width: 800px;
     	margin: 0 auto;
     	display: block;
     }
@@ -94,7 +94,7 @@
   	<a href="portfolio.html">Portfolio</a>
  </nav>	
 <h1> Resume</h1>
-<iframe src="Ricky Delgado Resume.pdf"></iframe>
+<iframe src="Ricky Delgado Resume_WEB.pdf"></iframe>
 
 </body>
 </html>
