--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@ ul li a i:hover {
 <h1>Ricky Delgado Design</h1>
 <h2>Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!</h2>
 <section><i class="fa fa-camera"></i> <i class="fa fa-gamepad"></i> <i class="fa fa-picture-o"></i></section>
+
+<iframe src="https://player.vimeo.com/video/36519586?color=ff9933" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/36519586">a story for tomorrow.</a> from <a href="https://vimeo.com/gnarlybay">gnarly bay</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
 <section id="type">
 <p>
     <p>I am a graphic designer based in sunny Miami, Florida.
