--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <title>Ricky Delgado</title>
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+  <link rel="shortcut icon" href="RickyDelgadoFavicon.ico" />
+  <link rel="apple-touch-icon" href="RickyDelgadoTouchFavicon.png" />
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
