--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ ul li a i:hover {
   </style>
 </head>
 <body>
-<section id="logo">  <img src="http://i.imgur.com/sJbG4me.png" alt="Welcome!" width="200"></section>
+<section id="logo">  <img src="http://i.imgur.com/LvMks4C.png" alt="Welcome!" width="200"></section>
   <nav>
   	<a href="about.html">About Me</a> | 
   	<a href="contact.html">Contact Me</a> |
