--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ ul li a i:hover {
 	  background-repeat:no-repeat;
     }
   </style>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"></script>
 </head>
 <body>
 <section id="logo">  <img src="http://i.imgur.com/TTlWXQo.png" alt="Welcome!" width="200"></section>
