--- a/portfolio.html
+++ b/portfolio.html
@@ -73,6 +73,7 @@ a:hover,img:hover {
 	  background-repeat:no-repeat;
     }
   </style>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"></script>
 </head>
 
 <body>
