--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@ ul li a i:hover {
   </nav>
 <h1>Ricky Delgado Design</h1>
 <h2>Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!</h2>
+<img src="https://media.licdn.com/mpr/mpr/shrink_200_200/p/8/005/076/118/3fad984.jpg">
 <section><i class="fa fa-camera"></i> <i class="fa fa-gamepad"></i> <i class="fa fa-picture-o"></i></section>
 
 <iframe src="https://player.vimeo.com/video/36519586?color=ff9933" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/36519586">a story for tomorrow.</a> from <a href="https://vimeo.com/gnarlybay">gnarly bay</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
