--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ ul li a i:hover {
 	  background-repeat:no-repeat;
     }
   </style>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"</script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"></script>
 </head>
 <body>
@@ -119,7 +120,7 @@ ul li a i:hover {
 <h2>Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!</h2>
 
 
-<data-lightbox="image-1" data-title="WOO" a href="http://scontent-a.cdninstagram.com/hphotos-xpf1/t51.2885-15/10453999_1465447807029810_196523597_n.jpg">
+<a href="http://scontent-a.cdninstagram.com/hphotos-xpf1/t51.2885-15/10453999_1465447807029810_196523597_n.jpg" data-lightbox="image-1" data-title="WOO">
 <img src="https://media.licdn.com/mpr/mpr/shrink_200_200/p/8/005/076/118/3fad984.jpg">
 </a>
 
