--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ ul li a i:hover {
 <h2>Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!</h2>
 
 
-<a href="http://scontent-a.cdninstagram.com/hphotos-xpf1/t51.2885-15/10453999_1465447807029810_196523597_n.jpg" data-lightbox="image-1" data-title="WOO">
+<a data-lightbox="miami" href="http://scontent-a.cdninstagram.com/hphotos-xpf1/t51.2885-15/10453999_1465447807029810_196523597_n.jpg">
 <img src="https://media.licdn.com/mpr/mpr/shrink_200_200/p/8/005/076/118/3fad984.jpg">
 </a>
 
