--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ ul li a i:hover {
 <h2>Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!</h2>
 
 
-<a data-lightbox="miami" href="http://scontent-a.cdninstagram.com/hphotos-xpf1/t51.2885-15/10453999_1465447807029810_196523597_n.jpg">
-<img src="https://media.licdn.com/mpr/mpr/shrink_200_200/p/8/005/076/118/3fad984.jpg">
+<a data-lightbox="miami" href="http://upload.wikimedia.org/wikipedia/commons/a/a5/Mouth_of_Miami_River_20100211.jpg">
+<img src="http://www.miamiandbeaches.com/~/media/images/gmcvb/miamiandbeaches/travel%20guides/itineraries/large%20images%20452x406/itineraries-miami-for-first-timers-452x406.ashx">
 </a>
 
 
