--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@ ul li a i:hover {
 	  background-repeat:no-repeat;
     }
   </style>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"</script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
+<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"></script>
 </head>
 <body>
@@ -120,8 +121,8 @@ ul li a i:hover {
 <h2>Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!</h2>
 
 
-<a data-lightbox="miami" href="http://upload.wikimedia.org/wikipedia/commons/a/a5/Mouth_of_Miami_River_20100211.jpg">
-<img src="http://www.miamiandbeaches.com/~/media/images/gmcvb/miamiandbeaches/travel%20guides/itineraries/large%20images%20452x406/itineraries-miami-for-first-timers-452x406.ashx">
+<a data-lightbox="miami" href="http://qph.is.quoracdn.net/main-thumb-63172083-200-aadzfsgiqjrexznxbfamkrmfcbxgldle.jpeg">
+<img src="http://s3-media1.fl.yelpcdn.com/bphoto/Z7IUuft-hZ06PpWvHoIEyg/ls.jpg">
 </a>
 
 
