--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ ul li a i:hover {
 <h2>Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!</h2>
 
 
-<a data-lightbox="miami" href="http://qph.is.quoracdn.net/main-thumb-63172083-200-aadzfsgiqjrexznxbfamkrmfcbxgldle.jpeg">
+<a data-lightbox="miami" href="https://scontent.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/11176114_830146503742309_89748796_n.jpg">
 <img src="http://s3-media1.fl.yelpcdn.com/bphoto/Z7IUuft-hZ06PpWvHoIEyg/ls.jpg">
 </a>
 
