--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ ul li a i:hover {
 
 
 <a data-lightbox="miami" href="https://scontent.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/11176114_830146503742309_89748796_n.jpg">
-<img src="http://s3-media1.fl.yelpcdn.com/bphoto/Z7IUuft-hZ06PpWvHoIEyg/ls.jpg">
+<img src="https://v.cdn.vine.co/v/avatars/03B81F6C-8227-421B-9EBA-1B31A783C393-901-0000003E18D17FD4.jpg?versionId=dzofZvtY5hL4JGUiihgA00M266at17VV">
 </a>
 
 
