--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ ul li a i:hover {
 <h2>Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!</h2>
 
 
-<a data-lightbox="miami" data-caption="WOO!" href="https://scontent.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/11176114_830146503742309_89748796_n.jpg">
+<a data-lightbox="miami" data-title="Heres a photo of me" href="https://scontent.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/11176114_830146503742309_89748796_n.jpg">
 <img src="https://v.cdn.vine.co/v/avatars/03B81F6C-8227-421B-9EBA-1B31A783C393-901-0000003E18D17FD4.jpg?versionId=dzofZvtY5hL4JGUiihgA00M266at17VV">
 </a>
 
