--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <link rel="shortcut icon" href="/RickyDelgadoFavicon.ico" />
   <link rel="apple-touch-icon" href="/RickyDelgadoTouchFavicon.png" />
-  <link rel="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css"
+  <link rel="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
