--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
   <style>
   
     
@@ -84,7 +85,7 @@ ul li a i:hover {
     
     h1 {
       color:#303;
-      font-family: 'Megrim', cursive;
+      font-family: 'Quicksand', sans-serif;
       font-size: 46px;
       text-shadow: 1px 1px 2px white;
     }
