--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ ul li a i:hover {
   	<a href="resume.html">My Resume</a> |
   	<a href="portfolio.html">Sample Gallery</a>
   </nav>
-<h1>Ricky Delgado Design</h1>
+<h1>RICKY DELGADO DESIGN</h1>
 <h2>Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!</h2>
 
 
