--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
+  <link href="http://weloveiconfonts.com/api/?family=zocial);" rel="stylesheet">
   <style>
   
     
@@ -105,6 +106,11 @@ ul li a i:hover {
           text-align: center;
 	  background-repeat:no-repeat;
     }
+	  
+    [class*="zocial-"]:before {
+    font-family: 'zocial', sans-serif;
+     }	  
+  
   </style>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
@@ -118,6 +124,7 @@ ul li a i:hover {
   	<a href="resume.html">My Resume</a> |
   	<a href="portfolio.html">Sample Gallery</a>
   </nav>
+  <span class="zocial-skype"></span>
 <h1>RICKY DELGADO DESIGN</h1>
 <h2>Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!</h2>
 
